# rota-korpuss-gen

./: .gitignore  Cargo.toml  Makefile.toml  README.md  config-20-jan-2018.yaml  config.yaml  offs.rb  rota.csv
src/: main.rs
