[package]
name = "rota-korpuss-gen"
version = "0.1.1"
authors = ["Blake"]
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3", features = ["derive"] }
csv = "1.0.0-beta.5"
itertools = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.10"
thiserror = "1.0.32"
